# maskverif-doc

./: .gitignore  .merlin  META  Makefile  README  _tags  a.out  default.nix  dune-project  log  maskverif.opam  maskverif.opam.template  myocamlbuild.ml  result6  run-lists.sh  run-test.py  run.sh  test.ec  tutorial.mv
benchs/: script.sh  script1.sh  script2.sh
doc/: general.html  general.md  prog.html  prog.md
error_tests/: test_call.txt  test_call1.txt  test_call2.txt  test_call3.txt  test_init.txt  test_init2.txt
examples/: .dir-locals.el  Byte.ec  Mult7.ec  gen_mul.ec  generate_refresh  generate_refresh.cmi  generate_refresh.cmx  generate_refresh.ml  note.txt  paragen  refresh.ec  refresh5.ec  refresh6.ec  refresh_11_1_2.ec  refresh_12_1_2.ec  refresh_13_1_2.ec  refresh_13_1_3.ec  refresh_4_1.ec  sni_refresh_11.ec  sni_refresh_11_3_5.ec
extlm/: secxor.mv
graphs/: Makefile  genGraph.ml  run.sh
half/: Makefile  half.ml  half6.out  half7.out  half8.out  half9.out
output-1/: order-2-Order2.err  order-2-ni_mult.err  order-2-ni_refresh.err  order-2-ni_sbox.err  order-2-sni_mult.err  order-2-sni_refresh.err  order-2-sni_sbox.err  order-3-Order3.err  order-3-ni_refresh.err  order-3-sni_refresh.err  order-4-Order4.err  order-4-ni_refresh.err  order-4-sni_refresh.err  order-4-sni_refresh2.err  order-5-Order5.err  order-5-ni_refresh.err  order-5-sni_refresh.err  order-5-sni_refresh2.err  order-6-Order6.err  order-6-ni_refresh.err  order-6-sni_refresh.err  order-6-sni_refresh2.err  order-7-Order7.err  order-7-sni_refresh.err  order-7-sni_refresh2.err  order-7-sni_refresh3.err  order-8-Order8.err  order-8-sni_refresh.err  order-8-sni_refresh2.err  order-8-sni_refresh3.err  order-9-Order9.err  order-9-sni_refresh.err  order-9-sni_refresh2.err  order-9-sni_refresh3.err
printer/: Makefile  printRefresh.ml  run.sh
src/: .merlin  checker.ml  dune  expr.ml  expr.mli  ilang.ml  ilang_ast.ml  ilang_lexer.mll  ilang_parser.mly  lexer.mll  main.ml  main_input.ml  maskverif.ml  maskverif.mllib  maskverif.mlpack  pP_prog.ml  parser.mly  parsetree.ml  pexpr.ml  poly.ml  poly_solve.ml  prog.ml  shrcnt.ml  shrcnt.mli  shrcnt_low.c  state.ml  state.mli  tutorial_edited.mv  util.ml  util.mli
tests/: DOM_AND_1.txt  DOM_AND_2.txt  DOM_AND_3.txt  ISW_AND_1.txt  Keccak-Sbox_2.txt  Keccak-Sbox_3.txt  Keccak-Sbox_4.txt  Para_AND_3.txt  aes_sbox.ilang  aes_sbox.txt  aes_sbox_bitslice.mv  aes_sbox_gf256.mv  ascon1.mv  dom_and.ilang  dom_and.txt  example.txt  keccak_sbox.txt  (+6 more)
(+412 files in other folders)
