opam-version: "2.0"
name: "maskverif"
version: "0.8.0-ches"
maintainer: "Benjamin Gregoire"
license: "CeCILL-B"
bug-reports: "https://gitlab.com/benjgregoire/maskverif/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.07.1"}
  "dune" {>= "2.8.0"}
  "zarith"
  "menhir"
  "ocamlgraph"
  "batteries"
]
homepage: "https://gitlab.com/benjgregoire/maskverif"
dev-repo: "git+https://gitlab.com/benjgregoire/maskverif.git"
synopsis: "Maskverif is a tool to check the security of masked algorithms"
